--- a/{{ cookiecutter.project_slug }}/frontend_app/public/index.html
+++ b/{{ cookiecutter.project_slug }}/frontend_app/public/index.html
@@ -30,8 +30,8 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `yarn start`.
-      To create a production bundle, use `yarn build`.
+      To begin the development, run `npm start`.
+      To create a production bundle, use `npm build`.
     -->
   </body>
 </html>
