--- a/{{ cookiecutter.project_slug }}/frontend_app/public/index.html
+++ b/{{ cookiecutter.project_slug }}/frontend_app/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +37,7 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start`.
-      To create a production bundle, use `npm build`.
+      To create a production bundle, use `npm run build`.
     -->
   </body>
 </html>
